<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
  <TextView
  	android:text="@string/sAboutTitle"
  	android:id="@+id/textView1"
  	android:layout_width="wrap_content"
  	android:layout_height="wrap_content"
  	android:layout_gravity="center" />
  <TextView
  	android:text="@string/sAboutText"
  	android:id="@+id/textView1"
  	android:layout_width="wrap_content"
  	android:layout_height="0dp"
  	android:layout_weight="1"
  	android:gravity="center"
  	android:scrollbars="vertical" />
  <TextView
  	android:text="@string/sAboutFoot"
  	android:id="@+id/textView1"
  	android:layout_width="wrap_content"
  	android:layout_height="wrap_content"
  	android:layout_gravity="center" />
  
</LinearLayout>
